set fontweight to normail for strong and h1 tags to prevent font blurring, add some linespacing and change default grey colour

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -42,6 +42,7 @@ footer, .container:after {
 
 h1,h2,h3,p,a {
   color: $color--base;
+  font-weight: normal;
 }
 
 strong {
