--- a/app/assets/stylesheets/colors.css.scss
+++ b/app/assets/stylesheets/colors.css.scss
@@ -1,6 +1,6 @@
 $dark-grey: #353946;
 $medium-grey: rgb(113, 124, 151);
-$grey: #c8c8c8;
+$grey: rgb(53, 57, 69);
 $light-grey: #dadada;
 
 $dark-blue: rgb(43,49,70);
